Closed Bug 46966 Opened 24 years ago Closed 23 years ago

NS_ERROR_FAILURE exception thrown instead of NO_MODIFICATION_ALLOWED_ERR

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

VERIFIED FIXED
Future

People

(Reporter: ckritzer, Assigned: jst)

References

()

Details

(Keywords: dom1, polish, Whiteboard: [nsbeta1-])

Attachments

(1 file)

Overview:  When catching the DOMException for node.replaceChild(), 

node.removeChild(), and node.appendChild(), the exception thrown is 

NS_ERROR_FAILURE instead of NO_MODIFICATION_ALLOWED_ERR.



Steps to Reproduce:

1) Launch 2000-07-25-xx build

2) Load:

	- http://voodoolady/dom1/cdex024.html [node.replaceChild()]

	- http://voodoolady/dom1/cdex025.html [node.removeChild()]

	- http://voodoolady/dom1/cdex026.html [node.appendChild()]



Actual Results: NS_ERROR_FAILURE exception thrown



Expected Results: NO_MODIFICATION_ALLOWED_ERR



Platforms Tested:

 - MacOS9 2000-07-25-11-M17

 - Linux6 2000-07-25-08-M17

 - Win98  2000-07-25-09-M17
QA Contact: gerardok → ckritzer
Accepting and nominating for nsbeta3. Fixing this is trivial, it's just a matter
of changing NS_ERROR_FAILURE with the right DOM exception code in
nsDOMAttribute.cpp. 
Status: NEW → ASSIGNED
Marking nsbeta3+...
Whiteboard: [nsbeta3+]
Whiteboard: [nsbeta3+] → [nsbeta3+] trivial fix
This is now fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking VERIFIED FIXED on:
- LinuxRH62 2000-09-07-08-M18 Commercial
- Win98     2000-09-07-08-M18 Mozilla
- MacOS86   2000-09-07-04-M18 Commercial
Status: RESOLVED → VERIFIED
fails on 

2000-10-12-09-Mtrunk : win32 
2000-10-12-13-MN6 : win32 

2000-10-12-09-MN6 : linux
 
2000-10-11-10-MN6 : mac 
2000-10-12-15-Mtrunk: mac
 
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
--> Future
Target Milestone: --- → Future
This bug was marked to be fixed in a previous milestone but it didn't get fixed 
properly. Nominated for beta1.
Keywords: nsbeta1
This is not critical enough for nsbeta1.
Whiteboard: [nsbeta3+] trivial fix → [nsbeta1-]
changing qa contact
QA Contact: ckritzer → janc
Keywords: dom1
Component: DOM Level 1 → DOM HTML
QA contact Update
QA Contact: janc → desale
Worksforme build from 19/4. See attached testcase.
Thank you Fabian!
Status: REOPENED → RESOLVED
Closed: 24 years ago23 years ago
Resolution: --- → WORKSFORME
Updating QA contact to Shivakiran Tummala.
QA Contact: desale → stummala
fails on windows 07-18-05
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
wfm Windows 98, Mozilla build 2001111503
My testcase worksforme as well on linux cvs build from today. Marking FIXED
again. Sivakiran if you're still seeing this feel free to reopen, thanks.
Status: REOPENED → RESOLVED
Closed: 23 years ago23 years ago
Resolution: --- → FIXED
marking verified
Status: RESOLVED → VERIFIED
Component: DOM: HTML → DOM: Core & HTML
QA Contact: stummala → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: