Fixing nsbeta3+ bug 46966. Changing the exception thrown when a DOM Attribute node is modified. r=pollmann@netscape.com